2009-09-28  Michael Eager <eager@eagercon.com>

	* configure.host: Add microblaze.
	* libc/include/machine/ieeefp.h [MICROBLAZE]: Define __IEEE_BIG_ENDIAN.
	* libc/include/machine/setjmp.h [MICROBLAZE]: Define _JBLEN, _JBTYPE.
	* libc/include/sys/config.h [MICROBLAZE]: Define _REENT_SMALL,
	_UNIX98_THREAD_MUTEX_ATTRIBUTES.
	* libc/include/sys/types.h: Treat XMK like rtems, define
	PTHREAD_MUTEX_NORMAL, PTHREAD_MUTEX_ERRORCHECK, PTHREAD_MUTEX_RECURSIVE,
	PTHREAD_MUTEX_DEFAULT, PTHREAD_STACK_MIN, define stuct pthread_attr_s.
	* libc/machine/configure.in: Add microblaze.
	* libc/machine/configure: Add microblaze (not regenerated).
	* libc/machine/microblaze/configure.in: NEW.
	* libc/machine/microblaze/configure: Generate.
	* libc/machine/microblaze/Makefile.am: NEW.
	* libc/machine/microblaze/Makefile.in: Generate.
	* libc/machine/microblaze/{abort.c, strcmp.c, strcpy.c, strlen.c,
	mallocr.c, longjmp.S, setjmp.S}: NEW.
	* libc/stdlib/mallocr.c [MICROBLAZE]: Don't declare sbrk prototype,
	mALLOc(): return malloc value.

2009-09-27  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/locale.c (lc_ctype_charset): Set to "UTF-8" on Cygwin.
	(lc_message_charset): Ditto.
	(loadlocale): Set charset of the "C" locale to "UTF-8" on Cygwin.
	* libc/stdlib/mbtowc_r.c (__mbtowc): Default to __utf8_mbtowc on
	Cygwin.
	* libc/stdlib/wctomb_r.c (__wctomb): Default to __utf8_wctomb on
	Cygwin.

2009-09-26  Eric Blake  <ebb9@byu.net>

	* libc/include/sys/unistd.h (execvpe, fexecve) [__CYGWIN__]:
	Add declarations.

2009-09-24  Eric Blake  <ebb9@byu.net>

	* libc/include/sys/unistd.h (eaccess, euidaccess) [__CYGWIN__]:
	Add declarations.

2009-09-23  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/locale.c: Drop Cygwin-specific windows.h include.
	(loadlocale): Call __set_charset_from_codepage with 0 codepage.

2009-09-22  Ralf Corsépius <ralf.corsepius@rtems.org>

	* libc/include/stdlib.h: Add posix_memalign.

2009-09-22  Ralf Corsépius <ralf.corsepius@rtems.org>
