@@ -1,3 +1,8 @@
+2009-09-27  Corinna Vinschen  <corinna@vinschen.de>
+
+	* libc/stdlib/sb_charsets.c: Throughout, translate undefined
+	characters to their corresponding Windows Unicode value.
+
 2009-09-28  Michael Eager <eager@eagercon.com>
 
 	* configure.host: Add microblaze.
